--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <footer>
             <div class="footer_nav_2ndnav">
                 <ul>
-                    <li><a href="#">Dressing Room</a></li>
+                    <li><a href="#">Room</a></li>
                     <li><a href="#">Explore</a></li>
                     <li><a href="#">Help</a></li>
                     <li><a href="#">About</a></li>
